--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Realtime searches using rethinkdb",
   "main": "src/provider.js",
   "scripts": {
-    "test": "jasmine JASMINE_CONFIG_PATH=jasmine.json"
+    "test": "istanbul cover jasmine JASMINE_CONFIG_PATH=jasmine.json"
   },
   "repository": {
     "type": "git",
@@ -28,10 +28,12 @@
     "deepstream.io-client-js": "*"
   },
   "devDependencies": {
+    "coveralls": "^2.11.9",
     "deepstream.io": "^0.9.0",
     "deepstream.io-storage-rethinkdb": "^0.1.0",
     "grunt": "~0.4.5",
     "grunt-release": "0.9.0",
+    "istanbul": "^0.4.3",
     "jasmine": "2.4.1"
   }
 }
