--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "chai": "^3.5.0",
     "coveralls": "^2.11.9",
     "deepstream.io": "^0.9.0",
-    "deepstream.io-storage-rethinkdb": "^0.1.0",
+    "deepstream.io-storage-rethinkdb": "git+https://github.com/deepstreamIO/deepstream.io-storage-rethinkdb.git",
     "eslint": "^2.11.1",
     "eslint-config-airbnb": "^3.1.0",
     "istanbul": "^0.4.3",
