--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 env:
   global:
     - CXX=g++-4.8
-    - RETHINKDB_HOST=54.93.147.100
+
+addons:
+  rethinkdb: '2.3'
 
 # Do not insert any code under here without making sures it's in publishingtest first
 language: node_js
