--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   },
   "homepage": "https://github.com/deepstreamIO/deepstream.io-provider-search-rethinkdb",
   "dependencies": {
-    "deepstream.io-client-js": "1.1.0",
-    "rethinkdb": "2.3.3"
+    "deepstream.io-client-js": "^1.1.0",
+    "rethinkdb": "^2.3.3"
   },
   "devDependencies": {
     "chai": "^3.5.0",
