--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "coveralls": "^2.11.9",
-    "deepstream.io": "^1.0.0",
-    "deepstream.io-storage-rethinkdb": "git+https://github.com/deepstreamIO/deepstream.io-storage-rethinkdb.git",
+    "deepstream.io": "latest",
+    "deepstream.io-storage-rethinkdb": "latest",
     "eslint": "^3.0.1",
     "eslint-config-airbnb": "^3.1.0",
     "istanbul": "^0.4.3",
